cmake_minimum_required(VERSION 3.16)
project(Leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(Leetcode
         25_reverse-nodes-in-k-group.cpp 103_binary-tree-zigzag-level-order-traversal.cpp 415_add-strings.cpp 236_lowest-common-ancestor-of-a-binary-tree.cpp 31_next-permutation.cpp 1104_path-in-zigzag-labelled-binary-tree.cpp 23_merge-k-sorted-lists.cpp)
